# KaHIP

./: .gitignore  CMakeLists.txt
app/: evaluator.cpp  kaffpa.cpp
cmake/: kahipConfig.cmake.in
lib/data_structure/priority_queues/: maxNodeHeap.h
lib/partition/coarsening/matching/gpa/: gpa_matching.cpp
lib/partition/uncoarsening/refinement/quotient_graph_refinement/: complete_boundary.h
lib/tools/: timer.h
